--- a/core/static/css/appp.css
+++ b/core/static/css/appp.css
@@ -1,4 +1,5 @@
 html, body, h1, h2, h3, h4, h5, h6 {
+  overflow-x: hidden;
   color: #fff;
   margin: 0;
   padding: 0;
@@ -16,6 +17,9 @@ html, body, h1, h2, h3, h4, h5, h6 {
   -webkit-font-smoothing: antialiased;
   text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px; }
 
+body {
+  position: relative; }
+
 * {
   word-wrap: break-word; }
 
@@ -25,11 +29,42 @@ html, body, h1, h2, h3, h4, h5, h6 {
 
 .header {
   background: #fff;
-  padding: 25px 16px; }
+  padding: 25px 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
 
 .header__logo {
-  font-size: 20px;
+  font-size: 33px;
+  color: #000000;
   font-weight: bold; }
+
+.menu-btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 50px;
+  width: 60px;
+  position: relative;
+  z-index: 9999; }
+  .menu-btn__rect {
+    width: 100%;
+    height: 20%;
+    background: red;
+    border-radius: 20px; }
+    .menu-btn__rect--diag {
+      position: absolute; }
+      .menu-btn__rect--diag:nth-child(4) {
+        background: #fff;
+        opacity: 0;
+        transform: rotate(45deg);
+        -webkit-box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18);
+        -moz-box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18);
+        box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18); }
+      .menu-btn__rect--diag:nth-child(5) {
+        background: #fff;
+        opacity: 0;
+        transform: rotate(-45deg); }
 
 .menu {
   position: fixed;
@@ -41,27 +76,39 @@ html, body, h1, h2, h3, h4, h5, h6 {
   z-index: 1000;
   display: flex;
   flex-direction: column;
-  justify-content: center; }
+  justify-content: center;
+  transform: scaleY(0);
+  transform-origin: center bottom 0;
+  -webkit-box-shadow: 0px -12px 13px 0px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 0px -12px 13px 0px rgba(0, 0, 0, 0.28);
+  box-shadow: 0px -12px 13px 0px rgba(0, 0, 0, 0.28);
+  will-change: transform; }
 
 .menu__group {
   position: relative;
-  z-index: 1000; }
+  z-index: 1000;
+  margin-left: 2em; }
 
 .menu-wrapper:hover .menu:before {
   transform: scaleY(1); }
 
 .menu__item {
   font-size: 40px;
-  margin: 1em 0; }
+  margin: 1em 0;
+  opacity: 0;
+  will-change: transform; }
 
 .menu__bg {
   position: fixed;
   top: 0;
   left: 0;
   background: #01A698;
-  height: 100%;
+  height: 40%;
   width: 100%;
-  z-index: 999; }
+  z-index: 999;
+  transform: scaleY(0);
+  transform-origin: center top 0;
+  will-change: transform; }
 
 .crafts-cnt {
   background: #3B2724;
