--- a/core/static/css/appp.css
+++ b/core/static/css/appp.css
@@ -20,6 +20,10 @@ html, body, h1, h2, h3, h4, h5, h6 {
 body {
   position: relative; }
 
+a, a:hover {
+  color: white;
+  text-decoration: none; }
+
 * {
   word-wrap: break-word; }
 
@@ -56,15 +60,20 @@ body {
       position: absolute; }
       .menu-btn__rect--diag:nth-child(4) {
         background: #fff;
-        opacity: 0;
-        transform: rotate(45deg);
-        -webkit-box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18);
-        -moz-box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18);
-        box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18); }
+        transform: rotate(45deg) scaleX(0);
+        transform-origin: left center 0;
+        top: 0;
+        left: 8px;
+        border-radius: 0;
+        transition: all 0.5s cubic-bezier(0.15, 0.63, 0.37, 0.91); }
       .menu-btn__rect--diag:nth-child(5) {
         background: #fff;
-        opacity: 0;
-        transform: rotate(-45deg); }
+        transform: rotate(-45deg) scaleX(0);
+        transform-origin: right center 0;
+        top: 0;
+        left: -8px;
+        border-radius: 0;
+        transition: all 0.5s; }
 
 .menu {
   position: fixed;
@@ -96,7 +105,8 @@ body {
   font-size: 40px;
   margin: 1em 0;
   opacity: 0;
-  will-change: transform; }
+  will-change: transform;
+  list-style: none; }
 
 .menu__bg {
   position: fixed;
