--- a/core/static/sass/menu.scss
+++ b/core/static/sass/menu.scss
@@ -18,19 +18,25 @@
 
       &:nth-child(4) {
         background: #fff;
-        opacity: 0;
-        transform: rotate(45deg);
-
-        -webkit-box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18);
-        -moz-box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18);
-        box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18);
+        transform: rotate(45deg) scaleX(0);
+        transform-origin: left center 0;
+        top:0;
+        left: 8px;
+        border-radius: 0;
+        transition: all 0.5s cubic-bezier(.15,.63,.37,.91);
+        //-webkit-box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18);
+        //-moz-box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18);
+        //box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18);
       }
 
       &:nth-child(5) {
         background: #fff;
-        opacity: 0;
-        transform: rotate(-45deg);
-
+        transform: rotate(-45deg) scaleX(0);
+        transform-origin: right center 0;
+        top:0;
+        left: -8px;
+        border-radius: 0;
+        transition: all 0.5s;
         //-webkit-box-shadow: 8px -7px 8px -2px rgba(0,0,0,0.18);
         //-moz-box-shadow: 8px -7px 8px -2px rgba(0,0,0,0.18);
         //box-shadow: 8px -7px 8px -2px rgba(0,0,0,0.18);
@@ -73,6 +79,7 @@
   margin: 1em 0;
   opacity: 0;
   will-change: transform;
+  list-style: none;
 }
 
 .menu__bg {
