--- a/core/static/css/appp.css
+++ b/core/static/css/appp.css
@@ -50,39 +50,38 @@ a, a:hover {
   height: 50px;
   width: 60px;
   position: relative;
-  z-index: 9999; }
+  z-index: 101; }
   .menu-btn__rect {
     width: 100%;
     height: 20%;
     background: red;
     border-radius: 20px; }
     .menu-btn__rect--diag {
-      position: absolute; }
+      background: #fff;
+      position: absolute;
+      will-change: width;
+      width: 0;
+      opacity: 0;
+      border-radius: 10px; }
       .menu-btn__rect--diag:nth-child(4) {
-        background: #fff;
-        transform: rotate(45deg) scaleX(0);
-        transform-origin: left center 0;
+        transform: rotate(45deg);
+        transform-origin: left top 0;
         top: 0;
-        left: 8px;
-        border-radius: 0;
-        transition: all 0.5s cubic-bezier(0.15, 0.63, 0.37, 0.91); }
+        left: 11px; }
       .menu-btn__rect--diag:nth-child(5) {
-        background: #fff;
-        transform: rotate(-45deg) scaleX(0);
-        transform-origin: right center 0;
-        top: 0;
-        left: -8px;
-        border-radius: 0;
-        transition: all 0.5s; }
+        transform: rotate(-45deg);
+        transform-origin: left bottom 0;
+        top: 40px;
+        left: 15px; }
 
 .menu {
   position: fixed;
   width: 100%;
-  height: 80vh;
+  height: 80%;
   background: #600E1C;
   bottom: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 100;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -95,7 +94,7 @@ a, a:hover {
 
 .menu__group {
   position: relative;
-  z-index: 1000;
+  z-index: 101;
   margin-left: 2em; }
 
 .menu-wrapper:hover .menu:before {
@@ -115,7 +114,7 @@ a, a:hover {
   background: #01A698;
   height: 40%;
   width: 100%;
-  z-index: 999;
+  z-index: 100;
   transform: scaleY(0);
   transform-origin: center top 0;
   will-change: transform; }
