--- a/core/static/sass/menu.scss
+++ b/core/static/sass/menu.scss
@@ -5,7 +5,7 @@
   height: 50px;
   width: 60px;
   position: relative;
-  z-index: 9999;
+  z-index: 101;
 
   &__rect {
     width: 100%;
@@ -14,29 +14,30 @@
     border-radius: 20px;
 
     &--diag {
+      background: #fff;
       position: absolute;
+      will-change: width;
+      width: 0;
+      opacity: 0;
+      border-radius: 10px;
 
       &:nth-child(4) {
-        background: #fff;
-        transform: rotate(45deg) scaleX(0);
-        transform-origin: left center 0;
-        top:0;
-        left: 8px;
-        border-radius: 0;
-        transition: all 0.5s cubic-bezier(.15,.63,.37,.91);
+        transform: rotate(45deg);
+        transform-origin: left top 0;
+        top: 0;
+        left: 11px;
+
         //-webkit-box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18);
         //-moz-box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18);
         //box-shadow: -8px -7px 8px -2px rgba(0, 0, 0, 0.18);
       }
 
       &:nth-child(5) {
-        background: #fff;
-        transform: rotate(-45deg) scaleX(0);
-        transform-origin: right center 0;
-        top:0;
-        left: -8px;
-        border-radius: 0;
-        transition: all 0.5s;
+        transform: rotate(-45deg);
+        transform-origin: left bottom 0;
+        top: 40px;
+        left: 15px;
+
         //-webkit-box-shadow: 8px -7px 8px -2px rgba(0,0,0,0.18);
         //-moz-box-shadow: 8px -7px 8px -2px rgba(0,0,0,0.18);
         //box-shadow: 8px -7px 8px -2px rgba(0,0,0,0.18);
@@ -48,11 +49,11 @@
 .menu {
   position: fixed;
   width: 100%;
-  height: 80vh;
+  height: 80%;
   background: $red;
   bottom: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 100;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -66,7 +67,7 @@
 
 .menu__group {
   position: relative;
-  z-index: 1000;
+  z-index: 101  ;
   margin-left: 2em;
 }
 
@@ -89,7 +90,7 @@
   background: $blue;
   height: 40%;
   width: 100%;
-  z-index: 999;
+  z-index: 100;
   transform: scaleY(0);
   transform-origin: center top 0;
   will-change: transform;
