--- a/core/static/sass/positioning.scss
+++ b/core/static/sass/positioning.scss
@@ -1,9 +1,9 @@
 .crafts-artisan {
-  margin-top: 16px;
+  margin-top: 1em;
 }
 
 .crafts {
-  margin-top: 20px;
+  margin-top: 1.25em;
 }
 
 .description, .information {
@@ -11,15 +11,15 @@
 }
 
 .description__details {
-  margin-top: 10px;
+  margin-top: 0.625em;
   padding: 1em 2em;
-  margin-right: -16px;
+  margin-right: -1em;
 }
 
 .information__details {
-  margin-top: 10px;
+  margin-top: 0.625em;
   padding: 1em 2em;
-  margin-left: -16px;
+  margin-left: -1empx;
 }
 
 .comment{
@@ -27,11 +27,11 @@
 }
 
 .comments-title{
-  margin-bottom: 20px;
+  margin-bottom: 1.25em;
 }
 
 .new-comment-title{
-  font-size: 20px;
+  font-size: 1.25rem;
   margin: 3em 0 1em 0;
 }
 
