--- a/core/static/css/appp.css
+++ b/core/static/css/appp.css
@@ -39,7 +39,7 @@ a, a:hover {
   align-items: center; }
 
 .header__logo {
-  font-size: 33px;
+  font-size: 2.0625rem;
   color: #000000;
   font-weight: bold; }
 
@@ -47,22 +47,22 @@ a, a:hover {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 50px;
-  width: 60px;
+  height: 3.125em;
+  width: 3.75em;
   position: relative;
   z-index: 101; }
   .menu-btn__rect {
     width: 100%;
     height: 20%;
     background: red;
-    border-radius: 20px; }
+    border-radius: 1.25em; }
     .menu-btn__rect--diag {
       background: #fff;
       position: absolute;
       will-change: width;
       width: 0;
       opacity: 0;
-      border-radius: 10px; }
+      border-radius: 0.625em; }
       .menu-btn__rect--diag:nth-child(4) {
         transform: rotate(45deg);
         transform-origin: left top 0;
@@ -91,21 +91,28 @@ a, a:hover {
   -moz-box-shadow: 0px -12px 13px 0px rgba(0, 0, 0, 0.28);
   box-shadow: 0px -12px 13px 0px rgba(0, 0, 0, 0.28);
   will-change: transform; }
+  @media (min-width: 0px) and (max-width: 767px) and (orientation: landscape) {
+    .menu {
+      height: 75%; } }
 
 .menu__group {
   position: relative;
   z-index: 101;
   margin-left: 2em; }
-
-.menu-wrapper:hover .menu:before {
-  transform: scaleY(1); }
+  @media (min-width: 0px) and (max-width: 767px) and (orientation: landscape) {
+    .menu__group {
+      display: flex;
+      flex-wrap: wrap; } }
 
 .menu__item {
-  font-size: 40px;
+  font-size: 2.5rem;
   margin: 1em 0;
   opacity: 0;
   will-change: transform;
   list-style: none; }
+  @media (min-width: 0px) and (max-width: 767px) and (orientation: landscape) {
+    .menu__item {
+      margin: 0.6em 1em; } }
 
 .menu__bg {
   position: fixed;
@@ -121,10 +128,10 @@ a, a:hover {
 
 .crafts-cnt {
   background: #3B2724;
-  padding: 12px 16px 60px 16px; }
+  padding: 0.75em 1em 0.75em 1em; }
 
 .crafts-title {
-  font-size: 30px; }
+  font-size: 1.875em; }
 
 .crafts__bg {
   padding: 0.6em;
@@ -150,25 +157,25 @@ a, a:hover {
   text-align: right; }
 
 .description__title {
-  font-size: 25px;
+  font-size: 1.5625em;
   font-weight: bold; }
 
 .description__details {
   display: inline-block;
   background: #513533;
-  max-width: 285px;
+  max-width: 17.8125em;
   -webkit-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
   -moz-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
   box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11); }
 
 .information__title {
-  font-size: 25px;
+  font-size: 1.5625em;
   font-weight: bold; }
 
 .information__details {
   display: inline-block;
   background: #513533;
-  max-width: 285px;
+  max-width: 17.8125em;
   -webkit-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
   -moz-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
   box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11); }
@@ -176,7 +183,7 @@ a, a:hover {
     display: block; }
 
 .comments-title {
-  font-size: 25px;
+  font-size: 1.5625rem;
   text-align: center; }
 
 .comment {
@@ -187,26 +194,26 @@ a, a:hover {
   box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11); }
 
 .comment__author {
-  font-size: 20px;
-  margin-bottom: 5px; }
+  font-size: 1.25rem;
+  margin-bottom: 0.3125em; }
 
 .comment__text {
-  margin-bottom: 20px; }
+  margin-bottom: 1.25em; }
 
 .comment__date {
   font-style: italic;
   text-align: right;
-  font-size: 12px; }
+  font-size: 0.75rem; }
 
 .form-group__label {
   display: block;
-  font-size: 18px;
-  margin-bottom: 5px; }
+  font-size: 1.125rem;
+  margin-bottom: 0.3125em; }
 
 .form-group__input {
   font-family: "Arvo", serif;
-  padding: 5px 0 5px 3px;
-  font-size: 16px;
+  padding: 0.3125em 0 0.3125em 0.1875em;
+  font-size: 1rem;
   display: block;
   border: none;
   -webkit-box-shadow: 5px 6px 5px 0px rgba(0, 0, 0, 0.21);
@@ -215,14 +222,14 @@ a, a:hover {
 
 textarea.form-group__input {
   width: 100%;
-  height: 140px; }
+  height: 8.75em; }
 
 .submit-button {
   background: #03D8BE;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-family: "Arvo", serif;
   color: #fff;
-  border-radius: 30px;
+  border-radius: 1.1875em;
   border: none;
   padding: 0.6em 2em;
   display: block;
@@ -231,32 +238,32 @@ textarea.form-group__input {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.26); }
 
 .crafts-artisan {
-  margin-top: 16px; }
+  margin-top: 1em; }
 
 .crafts {
-  margin-top: 20px; }
+  margin-top: 1.25em; }
 
 .description, .information {
   margin-top: 2em; }
 
 .description__details {
-  margin-top: 10px;
+  margin-top: 0.625em;
   padding: 1em 2em;
-  margin-right: -16px; }
+  margin-right: -1em; }
 
 .information__details {
-  margin-top: 10px;
+  margin-top: 0.625em;
   padding: 1em 2em;
-  margin-left: -16px; }
+  margin-left: -1empx; }
 
 .comment {
   margin-bottom: 3em; }
 
 .comments-title {
-  margin-bottom: 20px; }
+  margin-bottom: 1.25em; }
 
 .new-comment-title {
-  font-size: 20px;
+  font-size: 1.25rem;
   margin: 3em 0 1em 0; }
 
 .form-group {
