--- a/core/static/sass/crafts.scss
+++ b/core/static/sass/crafts.scss
@@ -1,10 +1,10 @@
 .crafts-cnt {
   background: $brown;
-  padding: 12px 16px 60px 16px;
+  padding: 0.75em 1em 0.75em 1em;
 }
 
 .crafts-title{
-  font-size: 30px;
+  font-size: 1.875em;
 }
 
 .crafts__bg {
