--- a/core/static/sass/description-section.scss
+++ b/core/static/sass/description-section.scss
@@ -3,7 +3,7 @@
 }
 
 .description__title {
-  font-size: 25px;
+  font-size: 1.5625em;
   font-weight: bold;
   //text-align: right;
 }
@@ -11,21 +11,21 @@
 .description__details {
   display: inline-block;
   background: $light-brown;
-  max-width: 285px;
+  max-width: 17.8125em;
   -webkit-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
   -moz-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
   box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
 }
 
 .information__title{
-  font-size: 25px;
+  font-size: 1.5625em;
   font-weight: bold;
 }
 
 .information__details{
   display: inline-block;
   background: $light-brown;
-  max-width: 285px;
+  max-width: 17.8125em;
   -webkit-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
   -moz-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
   box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
