--- a/core/static/sass/menu.scss
+++ b/core/static/sass/menu.scss
@@ -2,16 +2,19 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 50px;
-  width: 60px;
+  height: 3.125em;
+  width: 3.75em;
   position: relative;
   z-index: 101;
+  @include to(small-l){
+
+  }
 
   &__rect {
     width: 100%;
     height: 20%;
     background: red;
-    border-radius: 20px;
+    border-radius: 1.25em;
 
     &--diag {
       background: #fff;
@@ -19,7 +22,7 @@
       will-change: width;
       width: 0;
       opacity: 0;
-      border-radius: 10px;
+      border-radius: 0.625em;
 
       &:nth-child(4) {
         transform: rotate(45deg);
@@ -63,24 +66,33 @@
   -moz-box-shadow: 0px -12px 13px 0px rgba(0, 0, 0, 0.28);
   box-shadow: 0px -12px 13px 0px rgba(0, 0, 0, 0.28);
   will-change: transform;
+
+  @include to(small-l){
+    height: 75%;
+  }
 }
 
 .menu__group {
   position: relative;
   z-index: 101  ;
   margin-left: 2em;
-}
 
-.menu-wrapper:hover .menu:before {
-  transform: scaleY(1);
+  @include to(small-l){
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .menu__item {
-  font-size: 40px;
+  font-size: 2.5rem;
   margin: 1em 0;
   opacity: 0;
   will-change: transform;
   list-style: none;
+
+  @include to(small-l){
+    margin: 0.6em 1em;
+  }
 }
 
 .menu__bg {
