--- a/core/static/sass/positioning.scss
+++ b/core/static/sass/positioning.scss
@@ -19,7 +19,7 @@
 .information__details {
   margin-top: 0.625em;
   padding: 1em 2em;
-  margin-left: -1empx;
+  margin-left: -1em;
 }
 
 .comment{
