--- a/core/static/sass/menu.scss
+++ b/core/static/sass/menu.scss
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 3.125em;
-  width: 3.75em;
+  height: 2.625em;
+  width: 3.05em;
   position: relative;
   z-index: 101;
-  @include to(small-l){
+  @include to(small-l) {
 
   }
 
@@ -38,8 +38,8 @@
       &:nth-child(5) {
         transform: rotate(-45deg);
         transform-origin: left bottom 0;
-        top: 40px;
-        left: 15px;
+        top: 33px;
+        left: 14px;
 
         //-webkit-box-shadow: 8px -7px 8px -2px rgba(0,0,0,0.18);
         //-moz-box-shadow: 8px -7px 8px -2px rgba(0,0,0,0.18);
@@ -67,19 +67,30 @@
   box-shadow: 0px -12px 13px 0px rgba(0, 0, 0, 0.28);
   will-change: transform;
 
-  @include to(small-l){
+  @include to(small-l) {
     height: 75%;
   }
 }
 
 .menu__group {
   position: relative;
-  z-index: 101  ;
+  z-index: 101;
   margin-left: 2em;
 
-  @include to(small-l){
+  @include to(x-small-l) {
     display: flex;
     flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    justify-content: space-evenly;
+  }
+
+  @include to(small-l) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    justify-content: space-evenly;
   }
 }
 
@@ -90,7 +101,12 @@
   will-change: transform;
   list-style: none;
 
-  @include to(small-l){
+  @include to(x-small-l) {
+    font-size: 1.8rem;
+    margin: 0.9em 0;
+  }
+
+  @include to(small-l) {
     margin: 0.6em 1em;
   }
 }
