--- a/core/static/sass/queries.scss
+++ b/core/static/sass/queries.scss
@@ -1,5 +1,11 @@
 @mixin to($media){
-  @if $media == small { // smartphones, small tablets and phablets
+  @if $media == x-small { // very small smartphones (iphone 4)
+    @media (min-width : 0px) and (max-width : 480px) and (orientation : portrait) {@content}
+  }
+  @else if $media == x-small-l{
+    @media (min-width : 0px) and (max-width : 480px) and (orientation : landscape) {@content}
+  }
+  @else if $media == small { // smartphones, small tablets and phablets
     @media (min-width : 0px) and (max-width : 767px) and (orientation : portrait) {@content}
   }
   @else if $media == small-l {
