--- a/core/static/css/appp.css
+++ b/core/static/css/appp.css
@@ -27,10 +27,6 @@ a, a:hover {
 * {
   word-wrap: break-word; }
 
-.comments-ctn {
-  padding: 1em;
-  background: #01A698; }
-
 .header {
   background: #fff;
   padding: 25px 16px;
@@ -140,72 +136,98 @@ a, a:hover {
   transform-origin: center top 0;
   will-change: transform; }
 
-.crafts-cnt {
-  background: #3B2724;
-  padding: 0.75em 1em 0.75em 1em; }
-
-.crafts-title {
-  font-size: 1.875em; }
-
-.crafts__bg {
+.img__bg {
   padding: 0.6em;
-  display: inline-block;
-  background: #72403b;
-  background: -moz-linear-gradient(left, #72403b 0%, #e68273 100%);
-  background: -webkit-gradient(left top, right top, color-stop(0%, #72403b), color-stop(100%, #e68273));
-  background: -webkit-linear-gradient(left, #72403b 0%, #e68273 100%);
-  background: -o-linear-gradient(left, #72403b 0%, #e68273 100%);
-  background: -ms-linear-gradient(left, #72403b 0%, #e68273 100%);
-  background: linear-gradient(to right, #72403b 0%, #e68273 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#72403b', endColorstr='#e68273', GradientType=1); }
+  display: inline-block; }
+  .img__bg--red {
+    background: #72403b;
+    background: -moz-linear-gradient(left, #72403b 0%, #e68273 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, #72403b), color-stop(100%, #e68273));
+    background: -webkit-linear-gradient(left, #72403b 0%, #e68273 100%);
+    background: -o-linear-gradient(left, #72403b 0%, #e68273 100%);
+    background: -ms-linear-gradient(left, #72403b 0%, #e68273 100%);
+    background: linear-gradient(to right, #72403b 0%, #e68273 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#72403b', endColorstr='#e68273', GradientType=1); }
+  .img__bg--yellow {
+    background: #a38b61;
+    background: -moz-linear-gradient(left, #a38b61 0%, #bfa371 30%, #ffdb95 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, #a38b61), color-stop(30%, #bfa371), color-stop(100%, #ffdb95));
+    background: -webkit-linear-gradient(left, #a38b61 0%, #bfa371 30%, #ffdb95 100%);
+    background: -o-linear-gradient(left, #a38b61 0%, #bfa371 30%, #ffdb95 100%);
+    background: -ms-linear-gradient(left, #a38b61 0%, #bfa371 30%, #ffdb95 100%);
+    background: linear-gradient(to right, #a38b61 0%, #bfa371 30%, #ffdb95 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a38b61', endColorstr='#ffdb95', GradientType=1); }
 
-.craft__img {
+.img__file {
   will-change: transform;
   max-width: 70vw;
   transform: translate(-17px, -16px);
   -webkit-box-shadow: 10px 10px 13px 0px rgba(0, 0, 0, 0.29);
   -moz-box-shadow: 10px 10px 13px 0px rgba(0, 0, 0, 0.29);
   box-shadow: 10px 10px 13px 0px rgba(0, 0, 0, 0.29); }
+  @media (min-width: 0px) and (max-width: 767px) and (orientation: landscape) {
+    .img__file {
+      max-width: 60vw; } }
 
-.description {
+.ctn {
+  padding: 0.75em 1em 2.55em 1em; }
+  @media (min-width: 0px) and (max-width: 767px) and (orientation: landscape) {
+    .ctn {
+      padding: 0.75em 3em 2.55em 3em; } }
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+    .ctn {
+      padding: 0.75em 3em 2.55em 3em; } }
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    .ctn {
+      padding: 0.75em 3em 2.55em 3em; } }
+
+.ctn__title {
+  font-size: 1.875em; }
+  .ctn__title--centered {
+    text-align: center; }
+
+.ctn--brown {
+  background: #3B2724; }
+
+.ctn--red {
+  background: #600E1C; }
+
+.ctn--blue {
+  background: #01A698; }
+
+.card--brown .card__content {
+  background: #513533; }
+
+.card--red .card__content {
+  background: #BF1734; }
+
+.card--blue .card__content {
+  background: #03D8BE; }
+
+.card--right {
   text-align: right; }
+  .card--right .card__content {
+    max-width: 17.8125em; }
 
-.description__title {
+.card--left {
+  text-align: left; }
+  .card--left .card__content {
+    max-width: 17.8125em; }
+
+.card__title {
   font-size: 1.5625em;
   font-weight: bold; }
 
-.description__details {
+.card__content {
   display: inline-block;
-  background: #513533;
-  max-width: 17.8125em;
   -webkit-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
   -moz-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
   box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11); }
-
-.information__title {
-  font-size: 1.5625em;
-  font-weight: bold; }
-
-.information__details {
-  display: inline-block;
-  background: #513533;
-  max-width: 17.8125em;
-  -webkit-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
-  -moz-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
-  box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11); }
-  .information__details * {
+  .card__content * {
     display: block; }
 
-.comments-title {
-  font-size: 1.5625rem;
-  text-align: center; }
-
-.comment {
-  padding: 1em;
-  background: #03D8BE;
-  -webkit-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
-  -moz-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
-  box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11); }
+.card--comment .card__content {
+  display: block; }
 
 .comment__author {
   font-size: 1.25rem;
@@ -238,7 +260,7 @@ textarea.form-group__input {
   width: 100%;
   height: 8.75em; }
 
-.submit-button {
+.submit-btn {
   background: #03D8BE;
   font-size: 1.125rem;
   font-family: "Arvo", serif;
@@ -251,30 +273,78 @@ textarea.form-group__input {
   -moz-box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.26);
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.26); }
 
-.crafts-artisan {
-  margin-top: 1em; }
+.ctn__title {
+  margin: 1em 0; }
 
-.crafts {
+.ctn__title--artifact {
+  margin-bottom: 0; }
+
+.ctn__subtitle {
+  margin-bottom: 2em; }
+
+.ctn--padded {
+  padding: 1em; }
+
+.img {
   margin-top: 1.25em; }
+  .img--centered {
+    text-align: center; }
 
-.description, .information {
+.card {
   margin-top: 2em; }
+  .card__content {
+    padding: 1em 2em; }
+  .card--centered {
+    text-align: center; }
+  .card--comment .card__content {
+    text-align: left; }
 
-.description__details {
+.card--right .card__content {
   margin-top: 0.625em;
-  padding: 1em 2em;
   margin-right: -1em; }
+  @media (min-width: 0px) and (max-width: 767px) and (orientation: landscape) {
+    .card--right .card__content {
+      margin-right: -3em; } }
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+    .card--right .card__content {
+      margin-right: -3em; } }
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    .card--right .card__content {
+      margin-right: -3em; } }
 
-.information__details {
+.card--left .card__content {
   margin-top: 0.625em;
-  padding: 1em 2em;
   margin-left: -1em; }
+  @media (min-width: 0px) and (max-width: 767px) and (orientation: landscape) {
+    .card--left .card__content {
+      margin-left: -3em; } }
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+    .card--left .card__content {
+      margin-left: -3em; } }
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    .card--left .card__content {
+      margin-left: -3em; } }
 
-.comment {
-  margin-bottom: 3em; }
+.card--full-width .card__content {
+  display: block;
+  text-align: center;
+  margin-left: -1em;
+  margin-right: -1em; }
+  @media (min-width: 0px) and (max-width: 767px) and (orientation: landscape) {
+    .card--full-width .card__content {
+      margin-left: -3em;
+      margin-right: -3em; } }
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+    .card--full-width .card__content {
+      margin-left: -3em;
+      margin-right: -3em; } }
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    .card--full-width .card__content {
+      margin-left: -3em;
+      margin-right: -3em; } }
 
-.comments-title {
-  margin-bottom: 1.25em; }
+.card__title {
+  margin-bottom: 0.55em; }
 
 .new-comment-title {
   font-size: 1.25rem;
@@ -283,5 +353,9 @@ textarea.form-group__input {
 .form-group {
   margin-bottom: 1em; }
 
-.submit-button {
-  margin: 1.5em auto 1em; }
+.submit-btn {
+  margin-top: 1.5em;
+  margin-bottom: 1em; }
+  .submit-btn--centered {
+    margin-left: auto;
+    margin-right: auto; }
