--- a/core/static/sass/form.scss
+++ b/core/static/sass/form.scss
@@ -1,31 +1,3 @@
-.comments-title {
-  font-size: 1.5625rem;
-  text-align: center;
-}
-
-.comment {
-  padding: 1em;
-  background: $light-blue;
-  -webkit-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
-  -moz-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
-  box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
-}
-
-.comment__author {
-  font-size: 1.25rem;
-  margin-bottom: 0.3125em;
-}
-
-.comment__text {
-  margin-bottom: 1.25em;
-}
-
-.comment__date {
-  font-style: italic;
-  text-align: right;
-  font-size: 0.75rem;
-}
-
 .form-group__label {
   display: block;
   font-size: 1.125rem;
@@ -48,7 +20,7 @@ textarea.form-group__input { //used tag due Django form rendering
   height: 8.75em;
 }
 
-.submit-button {
+.submit-btn {
   background: $light-blue;
   font-size: 1.125rem;
   font-family: "Arvo", serif;
