--- a/core/static/sass/header.scss
+++ b/core/static/sass/header.scss
@@ -1,6 +1,6 @@
 .header {
   background: #fff;
-  padding: 25px 16px;
+  padding: 1.5625em 1em;
   display: flex;
   justify-content: space-between;
   align-items: center;
